# faccina

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierrc  Dockerfile  README.md  build.ps1  build.sh  bun.lockb  cluster.js  cluster.ts  components.json  config.docker.toml  config.example.toml  create-copy.ts  default.nix  dist-linux.sh  docker-compose.example.yaml  docs.md  embed-sharp.ts  empty-pollyfills.js  entrypoint.ts  eslint.config.js  flake.nix  go.mod  go.sum  go_config.json  migrate.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  serve.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
server/: Cargo.toml  Dockerfile  README.md  api.go  auth.go  config.docker.toml  config.example.toml  general.go  image.go  internal.go  server.go  user.go  util.go
server/.sqlx/: query-002a37764bb3802794d8920a2f2847f0f1913eaeb2b2bc0e18242802aa3524d8.json  query-00edb7f961da918689f0de20b2e118a626c94c19f40065a82b86f6e630166fbb.json  query-02539ec13f323b9c79f454f264e4616c7a34d6b3269958d974229cc4b41de3c7.json  query-045e17720d08f250e5f03ce4736282a0a26ead8024b6984bb6061dc29195d575.json  query-062f93e3cb72bb1af0c82c020db44ac80d9c2807d5e2ecc251612f0d64cf23c6.json  query-06c7003aa04377f852690b547167b0e7dc56f2495345c4c7bb99f358b8aafe3f.json  query-06d1da6c6f338873b78f04664974d80c46d5a77000a206ea725ae26bcd6206f6.json  query-0aedf1b48cca32154a947752c156735fc57b3c22d7381e65b205d50f92fcceab.json  query-0e743c83f8ca8c3095a781dcfe597e6d6d8a36e44a90de8482ee2f54be9697ef.json  query-1960c7858b8141f12660459b13d173230b04890e8d13e8e748c814ef9d85b617.json  query-1990f6932114cc5dcb5a33d9759818ff6ff80d699a13054511cb3605920149af.json  query-1d765e9d1c5cafba0182496d226055474fe4451f5a61c06ebb65f032dd6ac7d8.json  query-1da6048f5fc3ea22dbdd2ea46368c0edb3d60b3a3ba9b9d4b48494dd4e3cabb9.json  query-1e76bb128b6cd1563a6446876b7950e68b58a4cbfba34aa2fd242cd5e2f87582.json  query-1efbefad942884ac84836d20f878ed475c8a4ffd6caef09d11c8c3cb54ec530b.json  query-2273a0334409536458d39a7332fbbb72c864c1964f9de87ca42c09bd5009b544.json  query-2450574975d12b08c98862b5e6fabec782736e6680ff2978ac917dbdac5e0df2.json  query-24b7b5dbb3fd18bb8501598966311228931037e452b2b99f671ce343aabda673.json  query-252077e7f8bd4782081a5bddab3deb09c979566e9297954082f6f4943f729402.json  query-2538d4424c875ac1fa3d869467e70deac72470b36661a64fa128d1578fb6370e.json  query-2852a645927e0ba87c8cfe403f0361f685fa102cbb9c99cbfe3b3428e168a1d4.json  query-2aa1320b79d3172a4009b56764159756808a30d7a777c1ede2c01db4a662dcb9.json  (+84 more)
server/migrations/: 20240604034645_init.sql  (+7 more)
(+650 files in other folders)
