[package]
name = "server"
version = "1.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async_zip = { version = "0.0.17", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
data-encoding = "2.6.0"
file-format = "0.25.0"
funty = "2.0.0"
globwalk = "0.9.1"
image = { version = "0.25.1", features = ["rayon"] }
indicatif = "0.17.8"
itertools = "0.13.0"
lava_torrent = "0.11.1"
natord = "1.0.9"
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.4"
ring = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
slug = "0.1.5"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
toml = "0.8.14"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.0"
webp = "0.3.0"
zip = "2.1.2"
